# ebcl_template

./: .env  .gitignore  .gitmodules  .venv  CHANGELOG.md  LICENSE  README.md  TODO.md  User_guide.md  book.toml  ebcl_sdk.code-workspace  ebcl_sdk_1-1-0.code-workspace  ebcl_sdk_1-2.code-workspace  enter_container  init_container  init_workspace  performance_arm64_qemu_crinit.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: mdbook.yml  pdf.yml  pdf_doc.yml  robot-tests.yml  vscode-tasks.yml
.tours/: building-and-running-the-first-ebcl-image.tour
app/: CMakeLists.txt
apps/common/: CMakeLists.txt.template  CMakePresets.json  CMakePresets.json.template  check_and_update_ssh_key.sh  deployment.targets
apps/ebclfsa-demo/: CMakeLists.txt  CMakePresets.json  Readme.md
apps/ebclfsa-demo/common/: common.h
apps/ebclfsa-demo/hi/: CMakeLists.txt  hi_common.h  hi_forward.c  hi_main.c
apps/ebclfsa-demo/li/: CMakeLists.txt  li_main.c
apps/ebclfsa-demo/shmlib/: CMakeLists.txt
apps/ebclfsa-demo/shmlib/include/: shmlib_hi_app.h  shmlib_lock.h  shmlib_logger.h  shmlib_proxyshm.h  shmlib_ringbuffer.h  shmlib_shm.h  shmlib_watchdog.h
apps/ebclfsa-demo/shmlib/src/: shmlib_hi_app.c  shmlib_hi_shm.c  shmlib_li_shm.c  shmlib_lock.c  shmlib_logger.c  shmlib_proxyshm.c  shmlib_ringbuffer.c  shmlib_shm.c  shmlib_watchdog.c
apps/meminfo-reader/: CMakeLists.txt  CMakePresets.json  app_presets.json  meminfo_reader.c
apps/my-json-app/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  app_presets.json  main.cpp
apps/my-qt-app/: CMakeLists.txt  CMakePresets.json  README.md  helloworld.cpp
cmake/: ebcl_sdk.cmake
container/: .gitignore  README.md  build_container  build_container.py  build_container.sh  exec_command  run_background  run_container  run_container.sh
container/appdev/: Dockerfile
container/base/: Dockerfile
container/elbe/: Dockerfile
container/kiwi/: Dockerfile
container/pbuilder/: Dockerfile
container/rust/: Dockerfile
demo/hello-world/: CMakeLists.txt  hello-world.c  hello-world.crinit  hello-world.service
demo/myjsonapp/: CMakeLists.txt  main.cpp  myjsonapp.crinit  myjsonapp.service
docs/: README.md  SUMMARY.md  arm64_host.md  board_bringup.md  build_pdf.sh  custom.css  dev_container.md  graphics.tex  images.md  kernel.md  not-found.md  old_images.md  overview.md  packaging.md  quckstart.md  quickstart.md  setup.md
docs/apps/: ebclfsa_demo.md  index.md  packaging.md
docs/assets/: .$QEMU.drawio.bkp  EmbeddedHPC.drawio  EmbeddedSystem.drawio  QEMU.drawio  QEMU_flow.drawio  S32G2.drawio  S32G2_full.drawio  S32G2_fulltools.drawio  S32G2_kernel.drawio  boot_config.drawio  ebclfsa.drawio  ebclfsa_overview.drawio  embdgen.drawio  initrd_generator.drawio  root_config.drawio  root_generator.drawio
docs/container/: index.md  quickstart.md
docs/examples/: bbai64.md  index.md  kernel.md  qemu_amd64.md  qemu_arm64.md  qemu_ebclfsa.md  qemu_xen.md  rdb2.md  rpi.md
docs/images/: ebclfsa.md  from_scatch.md  index.md  old_images.md  overview.md  params.md  spec.md
docs/intro/: README.md  arm64_host.md  dev_container.md  overview.md  safety_concepts.md  setup.md
docs/src/: SUMMARY.md
docs/tests/: index.md  performance.md
docs/tools/: boot.md  embdgen.md  hypervisor.md  index.md  initrd.md  root.md  root_config.md
docs/workspace/: index.md
ebita-tests/: .gitignore  README.md  project.json  run_tests
ebita-tests/test_config/: appdev_class.xml  base_class.xml  build_class.xml  e2e_class.xml  elbe_class.xml  kiwi_class.xml  pbuilder_class.xml  rust_class.xml  sdk_suite.xml
ebita-tests/tests/: appdev.py  base.py  build.py  e2e.py  elbe.py  kiwi.py  pbuilder.py  rust.py  utils.py
gpg-keys/: .gitignore  env.sh
images/: .gitignore  berrymill.conf  berrymill.template  collect_report.sh  copy_demo_app.sh  qemu.mk  qemu.yml  qemu_aarch64.mk  qemu_aarch64.yml  qemu_aarch64_efi.mk  qemu_aarch64_efi.yml  qemu_x86_64 efi.yml  qemu_x86_64.mk  qemu_x86_64.yml  qemu_x86_64_efi.mk  qemu_x86_64_efi.yml  run_qemu_aarch64.sh  run_qemu_x86_64.sh
images/arm64/: RDB2.yml  RPi4.yml
images/common/: README.md  appdev.yaml  root.yaml
images/default/: appliance.kiwi
images/embdgen/: README.md
images/embegen/: .gitignore  image.yaml
images/nxp-s32g2-crinit/: README.md  appliance.kiwi  config.sh  images.sh  run-arm
images/nxp-s32g2-systemd/: appliance.kiwi  config.sh  images.sh  pre_disk_sync.sh  run-arm
images/qemu-crinit-aarch64/: README.md  appliance.kiwi  appliance_sysroot.kiwi  config.sh  pre_disk_sync.sh
images/qemu-crinit-amd64/: README.md  appliance.kiwi  config.sh  images.sh
images/qemu-crinit-x86_64/: README.md  appliance.kiwi  appliance_sysroot.kiwi  config.sh  pre_disk_sync.sh
images/qemu-systemd-aarch64/: README.md  appliance.kiwi  config.sh  images.sh  (+1 more)
robot_tests/: README.md  amd64_appdev_qemu_crinit.ci.test.env  amd64_appdev_qemu_crinit.test.env  amd64_appdev_qemu_systemd.test.env  amd64_qemu_appdev_crinit.robot  amd64_qemu_appdev_systemd.robot  arm64_appdev_qemu_crinit.ci.test.env  arm64_appdev_qemu_crinit.test.env  arm64_appdev_qemu_systemd.test.env  arm64_qemu_appdev_crinit.robot  arm64_qemu_appdev_systemd.robot  arm64_qemu_crinit.ci.test.env  arm64_qemu_crinit.test.env  arm64_qemu_jammy.test.env  arm64_qemu_noble.test.env  boot.robot  ci_tests.json  clear_test_output.sh  common.resource  crinit.robot  docker.robot  example-old-images.robot  image.resource  images.ci.test.env  images.robot  images.test.env  loopback.robot  performance.env  podman.robot  qemu_performance.robot  requirements.txt  robustness.robot  run-qemu  run_qemu.sh  run_tests.sh  test.env
robustness_tests/: run_make_qemu.py
tests/: README.md  appdev.robot  base.robot  build.robot  elbe.robot  kiwi.robot  pbuilder.robot  requirements.txt  rust.robot
tools/: README.md  init_container  init_workspace  my_settings.json  requirements.txt  setup_vscode  tasks.json  tasks.yaml
tools/vscode/: README.md  pyproject.toml
tools/vscode/ebcl_vscode/tools/tasks/: tasks.py  tasks.yaml
(+1003 files in other folders)
